rearranged and fixed material on definites in English

--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -43,7 +43,7 @@ It turns out that we don't need to know anything more about the atomic sentences
 
 We introduced five connectives in chapter \ref{ch.TFL}. To give substance to the claim that they are truth-functional, we simply need to explain how each connective yields a truth value for a compound sentence with that connective as its main connective, when supplied with the truth values of its \define{immediate subsentences}. In any sentence of the form $\meta{A} \eif \meta{B}$, $\meta{A}$ and $\meta{B}$ are the immediate subsentences, since those combine with the main connective to form the sentence.
 
-Not only does the truth value of a compound sentence of \TFL\ depend only on the truth values assigned to its subsentences, it does so \emph{uniquely}, because it is a function. We may happily refer to \emph{the} truth value of \meta{A} as determined by its constituents. This means we may represent the pattern of dependence of compound sentence truth values on immediate subsentence truth values in a simple table, like those we saw in §\ref{ss.function}. These tables show how to relate the input truth values to output truth values for any sentence connective. For convenience, we shall represent the truth values `True' by `T' and `False' by `F'. (Just to be clear, the two truth values are True and False; the truth values are not \emph{letters}!) 
+Not only does the truth value of a compound sentence of \TFL\ depend only on the truth values assigned to its subsentences, it does so \emph{uniquely}, because it is a function. We may happily refer to \emph{the} truth value of \meta{A} as determined by its constituents. This means we may represent the pattern of dependence of compound sentence truth values on immediate subsentence truth values in a simple table, like those we saw in §\ref{ss.function}. These tables show how to relate the input truth values to output truth values for any sentence connective. For convenience, we shall represent the truth value True by `T' and the value False by `F'. (Just to be clear, the two truth values are True and False; the truth values are not \emph{letters}!) 
 
 These truth tables completely characterise how the connectives of \TFL\ behave. Accordingly, we can take these schematic truth tables as giving the \emph{meanings} of the connectives. The truth function associated with a connective captures their entire contribution to the sentences in which they appear.
 
@@ -1227,7 +1227,7 @@ In fact, it can be shown that there are many other potential truth-functional co
 
 \section{The Expressive Power of \TFL}
 
-Should we be worried about this, and attempt to add new connectives to \TFL? It turns out we already have enough connectives to say \emph{anything} we wish to say that makes use of only truth-functional connectives. The connectives that are already in \TFL\ are \define{truth-functionally complete}: \factoidbox{For any truth-functional connective in any language – that is, which has a truth-table – there is a schematic sentence of \TFL\ which has the same truth table.} Remember that a schematic sentence is something like $\meta{A} \eor \enot \meta{B}$, where arbitrary \TFL\ sentences can fill the places indicated by \meta{A} and \meta{B}.
+Should we be worried about this, and attempt to add new connectives to \TFL? It turns out we already have enough connectives to say \emph{anything} we wish to say that makes use of only truth-functional connectives.\footnote{I should flag a potential limitation here: this result needs our assumption that True and False are the only truth values. Some \define{many-valued logics} include further `truth values'; for example a third truth value Indeterminate. (It is dubious whether that is a truth value, or whether a sentence having it just reflects our ignorance of its truth or falsity.) Such logics can have truth-functional connectives that don't behave like any connective of \TFL. One motivating example for a third truth value, neither true nor false, are cases of presupposition failure we will look at in §\ref{strawson}.} The connectives that are already in \TFL\ are \define{truth-functionally complete}: \factoidbox{For any truth-functional connective in any language – that is, one which has a truth-table like ours – there is a schematic sentence of \TFL\ which has the same truth table.} Remember that a schematic sentence is something like $\meta{A} \eor \enot \meta{B}$, where arbitrary \TFL\ sentences can fill the places indicated by \meta{A} and \meta{B}.
 
  
 
